@@ -15,6 +15,7 @@
 * Barclaycard Smartpay: Improves Error Handling [deedeelavinder] #3026
 * Braintree: Fix passing phone-only billing address [curiousepic] #3025
 * Litle: Capitalize check account type [curiousepic] #3028
+* Braintree: Account for nil billing address fields [curiousepic] #3029
 
 == Version 1.85.0 (September 28, 2018)
 * Authorize.Net: Support custom delimiter for cim [curiousepic] #3001
